UX: Styling fixes for Sidebar on mobile

--- a/app/assets/stylesheets/common/base/sidebar-footer.scss
+++ b/app/assets/stylesheets/common/base/sidebar-footer.scss
@@ -1,12 +1,3 @@
-.sidebar-wrapper {
-  .sidebar-footer-wrapper {
-    .sidebar-footer-container {
-      margin-left: 1.5em;
-      margin-right: 0.15em;
-    }
-  }
-}
-
 .sidebar-footer-wrapper {
   border-top: 1.5px solid var(--primary-low);
   padding: 0.5em 0 0.5em 0.33em;
