--- a/app/assets/stylesheets/common/base/sidebar-section-link.scss
+++ b/app/assets/stylesheets/common/base/sidebar-section-link.scss
@@ -127,7 +127,3 @@
     }
   }
 }
-
-#main-outlet-wrapper .sidebar-section-link-wrapper {
-  margin-left: 1.5em;
-}
